# uregistry

./: README.md  pyproject.toml
src/uregistry/: __init__.py  registry.py
tests/: test_uregistry.py
