[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uregistry"
version = "0.2.0"
description = "Directory-based configuration registry — file paths become env var names"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "bobuk" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/bobuk/uregistry"
